--- a/css/popstyles.css
+++ b/css/popstyles.css
@@ -7,4 +7,10 @@ html, body {
     flex-direction: column;
 }
 
+img {
+    width: 100;
+    height: 100;
+    margin: auto;
+    display: block;
+}
 
