--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,39 @@
 
+.prettyDiv {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 15px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 
-/* @font-face {
-    font-family: "LineFont";
-    src: url("chrome-extension://__MSG_@@extension_id__/fonts/LineFont.ttf") format("truetype");
-} */
+.buttonBox {
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.158);
+    height: 250px;
+    width: 250px;
+}
+
+button {
+    text-decoration: none;
+    font-weight: normal;
+    font-size: 1rem;
+    padding: 14px;
+    margin-top: 10px;
+    display: inline-block;
+    background-color: #ffe253;
+    transition: 0.3s;
+    border: 0px;
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+    border-radius: 10px;
+    background-color: #ffd503;
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
+}
