--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,9 @@
     border-radius: 15px;
     padding: 15px;
     box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.158);
-    height: 250px;
+    min-height: 25px;
     width: 250px;
+    
 }
 
 button {
@@ -24,7 +25,6 @@ button {
     font-weight: normal;
     font-size: 1rem;
     padding: 14px;
-    margin-top: 10px;
     display: inline-block;
     background-color: #ffe253;
     transition: 0.3s;
@@ -34,6 +34,6 @@ button {
 
 button:hover {
     border-radius: 10px;
-    background-color: #ffd503;
+    background-color: #ffe2509f;
     box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.25);
 }
