--- a/css/popstyles.css
+++ b/css/popstyles.css
@@ -1,24 +1,31 @@
 
+
+
 html, body {
     margin: 5;
-    min-height: 100px;
+    min-height: 60px;
     min-width: 150px;
     display: flex;
     flex-direction: column;
 }
 
 img {
-    width: 100;
-    height: 100;
+    width: 50;
+    height: 50;
     margin: auto;
     display: block;
 }
 
+p {
+    padding: 5px;
+    margin: auto;
+}
+
 .buttonBox {
     display: flex;
-    flex-direction: column;
     align-items: center;
-    align-content: center;
+    justify-content: center;
+    margin: 0;
 }
 
 #check {
@@ -27,11 +34,9 @@ img {
 }
 
 label[for="check"] {
+
     transition: 0.4s;
     opacity: 0.5;
-    display: inline-block;
-    width: 100px;
-    height: 100px; 
     background: url('images/ExtLogo.png') no-repeat;
     cursor: pointer;
 }
