--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: left;
+    justify-content: space-between;
     gap: 15px;
     margin-left: 75px;
-    margin-right: 35%;
+    margin-right: 75px;
 }
 
 .infotextdiv {
@@ -33,24 +33,39 @@
 
 div.pagebodydiv {
     margin-left: 105px;
-    
+    min-height: 500px;
 }
 
-.pagetitlediv {
+div.pagetitlediv {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: left;
-    min-height: 250px;
+    align-items: center;
+    margin-left: 160px;
+    margin-right: 160px;
+    max-bottom: 30px;
+
+    /* Image banner */
+    background-image: linear-gradient(to bottom,rgba(255,255,255,0) 70%, rgba(255,255,255,1) 95%), url('chrome-extension://__MSG_@@extension_id__/images/uofl_landscape.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 200px; 
+    border-radius: 10px 10px;
+
 }
 
 .pagetitlediv h2 {
     padding: 0;
-    margin-left: 145px;
     font-weight: bold;
-    background-image: url('images/uofl_landscape') !important;
-    background-position: center center;
-    background-size: cover;
+    font-size: 3.5rem;
+    padding: 30px;
+    color: white;
+}
+
+div.headerlinksdiv {
+    background: linear-gradient(130deg, #00437e 25%, #fdff81 60%, white 90%)!important;
 }
 
 
