changed gradient to improve visual clarity

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ div.pagetitlediv {
 }
 
 div.headerlinksdiv {
-    background: linear-gradient(130deg, #00437e 25%, #fdff81 60%, white 90%)!important;
+    background: linear-gradient(130deg, #00437e 45%, #85C7F2)!important;
 }
 
 
